--- a/donations/templates/donations/Results.html
+++ b/donations/templates/donations/Results.html
@@ -2,11 +2,13 @@
 {% load staticfiles otree %}
 
 {% block title %}
-    Page title
+    Results
 {% endblock %}
 
 {% block content %}
-
+    <p>
+    Your final payoff is {{player.payoff}}
+    </p>
     {% next_button %}
 {% endblock %}
 
